# cdc-event-codes

./: .gitignore  .pre-commit-config.yaml  README.md  download.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: main.yml
data/: README.md  README.template.md  event_code_files.json
data/raw/: DownloadHeader.txt  ValueSetRssFeed.xml  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V1.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V10.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V11.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V12.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V13.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V14.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V15.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V16.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V17.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V18.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V19.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V2.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V20.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V21.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V22.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V23.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V24.txt  ValueSets\PHVS_NotifiableEvent_Disease_Condition_CDC_NNDSS_V25.txt  (+26 more)
