[project]
name = "cdc-event-codes"
version = "1.0.0"
description = "To periodically fetch and parse CDC event codes from their RSS feed."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "py-markdown-table>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
